Fixing horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ body {
   font-weight: var(--fw-300);
   font-size: var(--font-size);
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .App {
